--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "angular": "~1.2.15",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "angular-local-storage": "~0.0.1"
   }
 }
